# hyLog

./: .gitignore  app.py  module.py  pyproject.toml
src/hylog/: __init__.py  config.py  decorator.py  formatters.py  handlers.py  main.py
src/hylog/configs/: default.json  stderr-file.json  stderr-json-file.json  stderr.json  stdout.json
src/hylog/handlers/: file.py  queue.py  stream.py
