[project]
name = "hylog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ckbuhl", email = "ckbuhl@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hylog = "hylog:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]
